# synapses-scout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  improvement.md  pyproject.toml  scout.json.example  synapses.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/scout/: __init__.py  __main__.py  cache.py  cli.py  config.py  models.py  orchestrator.py  router.py  scout.py  server.py
src/scout/distiller/: __init__.py  client.py
src/scout/extractor/: __init__.py  web.py
src/scout/media/: __init__.py  youtube.py
src/scout/searcher/: __init__.py  base.py  duckduckgo.py  tavily.py
tests/: conftest.py  test_cache.py  test_config.py  test_distiller.py  test_extractor.py  test_models.py  test_orchestrator.py  test_router.py  test_scout.py  test_server.py  test_youtube.py
