[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapses-scout"
version = "0.0.5"
description = "Web intelligence acquisition layer for Synapses-OS"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "crawl4ai>=0.4",
    "yt-dlp>=2024.0",
    "ddgs>=9.0",
    "trafilatura>=2.0",
    "lxml_html_clean>=0.4",
]

[project.optional-dependencies]
tavily = ["tavily-python>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "respx>=0.22",
]

[project.scripts]
scout = "scout.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
